--- a/Categorias/animacion/index.html
+++ b/Categorias/animacion/index.html
@@ -69,7 +69,17 @@ stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
 
 
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-<!--PEGAR CONTENIDO AQUI ABAJO--><!-- El senor de los anillos: La guerra de los Rohirrim -->
+<!--PEGAR CONTENIDO AQUI ABAJO--><!-- El Hijo De Pie Grande -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/pelicula660.html">
+    <img src="https://image.tmdb.org/t/p/original/7gxosH0lMAf1IEzmxppgVyMFqxn.jpg" alt="El Hijo De Pie Grande" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">El Hijo De Pie Grande</div>
+  <div class="text-xs text-white/70">2017</div>
+</article><!-- El senor de los anillos: La guerra de los Rohirrim -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/pelicula647.html">
     <img src="https://image.tmdb.org/t/p/original/hpBdT0o9EckoaGmPRPtcgNZpz4F.jpg" alt="El señor de los anillos: La guerra de los Rohirrim" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
