--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -260,7 +260,7 @@ document.addEventListener("DOMContentLoaded", () => {
    <img 
   src="https://image.tmdb.org/t/p/original/7gxosH0lMAf1IEzmxppgVyMFqxn.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
     <span class="hidden">El Hijo De Pie Grande 2017</span>
-    <span class="hidden">El adolescente Adam parte en busca de su padre, quien desapareció hace tiempo. Su sorpresa es mayúscula cuando descubre que su padre es, ni más ni menos, el legendario Pie Grande, y que él también posee poderes especiales.</span>
+    <span class="hidden">BIGFOOT JUNIOR big foot El adolescente Adam parte en busca de su padre, quien desapareció hace tiempo. Su sorpresa es mayúscula cuando descubre que su padre es, ni más ni menos, el legendario Pie Grande, y que él también posee poderes especiales.</span>
   </a>
 </li>
 <!--FIN--><!-- Hijo de Dios -->
