--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -254,7 +254,16 @@ document.addEventListener("DOMContentLoaded", () => {
 <div id="estadoBusqueda" class="text-center text-sm text-[#bbbbbb] mt-6 hidden"></div> <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
     <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
 
-      <!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- El Hijo De Pie Grande -->
+      <!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Hermano de Jorel especial de navidad: Hermano de Noel -->
+<li>
+  <a href="../Peliculas/pelicula661.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/3GWWAAh44ek8FuMRRP8FkK9MJn5.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Hermano de Jorel especial de navidad: Hermano de Noel 2022</span>
+    <span class="hidden"></span>
+  </a>
+</li>
+<!--FIN--><!-- El Hijo De Pie Grande -->
 <li>
   <a href="../Peliculas/pelicula660.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
