--- a/Categorias/animacion/index.html
+++ b/Categorias/animacion/index.html
@@ -69,7 +69,17 @@ stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
 
 
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Hermano de Jorel especial de navidad: Hermano de Noel -->
+<!--PEGAR CONTENIDO AQUI ABAJO--><!-- La Sirenita -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/pelicula662.html">
+    <img src="https://image.tmdb.org/t/p/original/Vc0KvO7z2OzEbRs6nyZs9xD81s.jpg" alt="La Sirenita" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">La Sirenita</div>
+  <div class="text-xs text-white/70">1989</div>
+</article><!-- Hermano de Jorel especial de navidad: Hermano de Noel -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/pelicula661.html">
     <img src="https://image.tmdb.org/t/p/original/3GWWAAh44ek8FuMRRP8FkK9MJn5.jpg" alt="Hermano de Jorel especial de navidad: Hermano de Noel" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
