Crear/Actualizar Categorias/comedia/index.html

--- a/Categorias/comedia/index.html
+++ b/Categorias/comedia/index.html
@@ -40,7 +40,17 @@
   </header>
   <main class="max-w-[1280px] mx-auto px-4 mt-24">
     <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Hermano de Jorel especial de navidad: Hermano de Noel -->
+      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- El cielo los esperaba -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/pelicula663.html">
+    <img src="https://image.tmdb.org/t/p/original/6ZzWtwtTxRWxE8rDVQvRQre5UR5.jpg" alt="El cielo los esperaba" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">El cielo los esperaba</div>
+  <div class="text-xs text-white/70">1993</div>
+</article><!-- Hermano de Jorel especial de navidad: Hermano de Noel -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/pelicula661.html">
     <img src="https://image.tmdb.org/t/p/original/3GWWAAh44ek8FuMRRP8FkK9MJn5.jpg" alt="Hermano de Jorel especial de navidad: Hermano de Noel" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
