Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -254,7 +254,16 @@ document.addEventListener("DOMContentLoaded", () => {
 <div id="estadoBusqueda" class="text-center text-sm text-[#bbbbbb] mt-6 hidden"></div> <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
     <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
 
-      <!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- La Sirenita -->
+      <!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- El cielo los esperaba -->
+<li>
+  <a href="../Peliculas/pelicula663.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/6ZzWtwtTxRWxE8rDVQvRQre5UR5.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">El cielo los esperaba 1993</span>
+    <span class="hidden">Cuatro personas, dos hombres y dos mujeres, mueren en un accidente de autobús, y sus almas se convierten en los amigos invisibles de un niño que nace en el mismo momento en que ellos mueren. Treinta años después, los cuatro personajes utilizarán el cuerpo de su amigo para resolver aquellas cosas que dejaron pendientes y que les permitirá hacer el viaje final.</span>
+  </a>
+</li>
+<!--FIN--><!-- La Sirenita -->
 <li>
   <a href="../Peliculas/pelicula662.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
