--- a/Categorias/serie/index.html
+++ b/Categorias/serie/index.html
@@ -42,7 +42,17 @@
   </header>
   <main class="max-w-[1280px] mx-auto px-4 mt-24">
     <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Los Siete Pecados Capitales -->
+      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Kamp Koral: Los primeros anos de Bob Esponja -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Series/serie63.html">
+    <img src="https://image.tmdb.org/t/p/original/mC23fANjhD5xDrlpq1bzllL2sEW.jpg" alt="Kamp Koral: Los primeros años de Bob Esponja" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Serie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Kamp Koral: Los primeros años de Bob Esponja</div>
+  <div class="text-xs text-white/70">2021</div>
+</article><!-- Los Siete Pecados Capitales -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Series/serie62.html">
     <img src="https://image.tmdb.org/t/p/original/yhmHgYvxj1Xez3q6pJKxQVFiP4S.jpg" alt="Los Siete Pecados Capitales" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
