--- a/Plataforma/nickelodeon/index.html
+++ b/Plataforma/nickelodeon/index.html
@@ -212,7 +212,17 @@ document.addEventListener("DOMContentLoaded", () => {
   </header>
   <main class="max-w-[1280px] mx-auto px-4 mt-24">
     <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- El Mejor Jugador -->
+      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Kamp Koral: Los primeros anos de Bob Esponja -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="https://lz.blogdepelis.lat/Series/serie63.html">
+    <img src="https://image.tmdb.org/t/p/original/mC23fANjhD5xDrlpq1bzllL2sEW.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Serie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Kamp Koral: Los primeros años de Bob Esponja</div>
+  <div class="text-xs text-white/70">2021</div>
+</article><!-- El Mejor Jugador -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="https://lz.blogdepelis.lat/Peliculas/pelicula605.html">
     <img src="https://image.tmdb.org/t/p/original/gLdUG7ZmEDfNeBu2s0KrlgTFwCl.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
