--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -254,7 +254,16 @@ document.addEventListener("DOMContentLoaded", () => {
 <div id="estadoBusqueda" class="text-center text-sm text-[#bbbbbb] mt-6 hidden"></div> <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
     <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
 
-      <!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- El cielo los esperaba -->
+      <!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Kamp Koral: Los primeros anos de Bob Esponja -->
+<li>
+  <a href="../Series/serie63.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/mC23fANjhD5xDrlpq1bzllL2sEW.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Kamp Koral: Los primeros años de Bob Esponja 2021</span>
+    <span class="hidden">En esta nueva aventura: Bob Esponja, Arenita, Calamardo, Patricio, Plankton y Don Cangrejo, pasan el verano construyendo fogatas bajo el agua, atrapando medusas salvajes y nadando en el lago Yucky Muck en el campamento más loco del bosque.</span>
+  </a>
+</li>
+<!--FIN--><!-- El cielo los esperaba -->
 <li>
   <a href="../Peliculas/pelicula663.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
