--- a/Series/serie63.html
+++ b/Series/serie63.html
@@ -89,7 +89,51 @@ var serieActual = {
   poster: "https://image.tmdb.org/t/p/original/mC23fANjhD5xDrlpq1bzllL2sEW.jpg"
 };
 
-var videosPorCapitulo = {"1":{"1":"","2":"","3":"","4":"","5":"","6":"","7":"","8":"","9":"","10":"","11":"","12":"","13":"","14":"","15":"","16":"","17":"","18":"","19":"","20":"","21":"","22":"","23":"","24":"","25":"","26":"","27":"","28":"","29":"","30":"","31":"","32":"","33":"","34":"","35":"","36":"","37":"","38":"","39":"","40":"","41":"","42":"","43":"","44":"","45":"","46":"","47":"","48":"","49":"","50":""},"2":{"1":"","2":"","3":"","4":"","5":"","6":"","7":"","8":"","9":"","10":"","11":"","12":"","13":"","14":"","15":"","16":"","17":"","18":"","19":"","20":"","21":"","22":"","23":"","24":"","25":""}};
+var videosPorCapitulo = {
+  "1": {
+    "1": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/gqkpbzmqs5bg",
+    "2": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/ubkzarwu6vrk",
+    "3": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/ez1glujz701r",
+    "4": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/4qjwjpnwiiax",
+    "5": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/fsm0vo8la6kg",
+    "6": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/nmw7ddmof0vf",
+    "7": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/ka1jzg7xgcz6",
+    "8": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/ujr4j6nhwwkz",
+    "9": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/qfnzii8feyev",
+    "10": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/se58b4faerjp",
+    "11": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/n9gekc0rd5ce",
+    "12": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/fe09ksy0bgco",
+    "13": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/6orzvkx70j65",
+    "14": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/znurx9yjofzo",
+    "15": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/xxccscmwg0d9",
+    "16": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/b9ipkwssmbvd",
+    "17": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/z3lkzmlpu6uf",
+    "18": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/hdox3r8thp5y",
+    "19": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/5vxquckcvk29",
+    "20": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/5pyd30paf5sq",
+    "21": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/s2n9qua1nf5d",
+    "22": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/7yoabksvnh5n",
+    "23": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/u3sqqv5cynfu",
+    "24": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/0rkt2zl87g4x",
+    "25": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/up2bhc0pw1qq",
+    "26": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/ksu3u4dhtpql"
+  },
+  "2": {
+    "1": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/kz9usdklberf",
+    "2": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/57x028rxm8rw",
+    "3": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/3025yulaqk84",
+    "4": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/5jp3wnk7x49e",
+    "5": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/76yrlryy9jq4",
+    "6": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/ibfldfgbkwmb",
+    "7": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/7csgt7vgi82o",
+    "8": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/w7i59tivmaae",
+    "9": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/bg3j0i8euglh",
+    "10": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/tkcc8z3u0hrg",
+    "11": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/ia0d9k8x6k57",
+    "12": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/vocysqoz038d",
+    "13": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/te2sn3ys82mr"
+  }
+} ;
 
 function guardarTemporada(temporada) {
   localStorage.setItem("temporadaSeleccionada_" + serieId, temporada);
