--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -260,7 +260,7 @@ document.addEventListener("DOMContentLoaded", () => {
    <img 
   src="https://image.tmdb.org/t/p/original/mC23fANjhD5xDrlpq1bzllL2sEW.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
     <span class="hidden">Kamp Koral: Los primeros años de Bob Esponja 2021</span>
-    <span class="hidden">En esta nueva aventura: Bob Esponja, Arenita, Calamardo, Patricio, Plankton y Don Cangrejo, pasan el verano construyendo fogatas bajo el agua, atrapando medusas salvajes y nadando en el lago Yucky Muck en el campamento más loco del bosque.</span>
+    <span class="hidden">kampamento campamento koral coral En esta nueva aventura: Bob Esponja, Arenita, Calamardo, Patricio, Plankton y Don Cangrejo, pasan el verano construyendo fogatas bajo el agua, atrapando medusas salvajes y nadando en el lago Yucky Muck en el campamento más loco del bosque.</span>
   </a>
 </li>
 <!--FIN--><!-- El cielo los esperaba -->
