--- a/Series/serie64.html
+++ b/Series/serie64.html
@@ -89,7 +89,182 @@ var serieActual = {
   poster: "https://image.tmdb.org/t/p/original/sqQGouRucsrFV2FgIZEKKkP5fSb.jpg"
 };
 
-var videosPorCapitulo = {"1":{"1":"","2":"","3":"","4":"","5":"","6":"","7":"","8":"","9":""},"2":{"1":"","2":"","3":"","4":"","5":"","6":"","7":"","8":"","9":"","10":"","11":"","12":"","13":"","14":"","15":"","16":"","17":"","18":"","19":"","20":""},"3":{"1":"","2":"","3":"","4":"","5":"","6":"","7":"","8":"","9":"","10":"","11":"","12":"","13":"","14":"","15":""},"4":{"1":"","2":"","3":"","4":"","5":"","6":"","7":"","8":"","9":"","10":"","11":"","12":""},"5":{"1":"","2":"","3":"","4":"","5":"","6":"","7":"","8":"","9":"","10":"","11":"","12":"","13":"","14":"","15":"","16":""},"6":{"1":"","2":"","3":"","4":"","5":"","6":"","7":"","8":"","9":"","10":"","11":"","12":"","13":"","14":"","15":"","16":"","17":"","18":"","19":"","20":"","21":"","22":"","23":"","24":"","25":"","26":""},"7":{"1":"","2":"","3":"","4":"","5":"","6":"","7":"","8":"","9":"","10":"","11":"","12":"","13":"","14":"","15":"","16":"","17":"","18":"","19":"","20":"","21":"","22":"","23":"","24":"","25":"","26":""},"8":{"1":"","2":"","3":"","4":"","5":"","6":"","7":"","8":"","9":"","10":""},"9":{"1":"","2":"","3":"","4":"","5":"","6":"","7":"","8":"","9":"","10":""},"10":{"1":"","2":"","3":"","4":"","5":"","6":"","7":"","8":"","9":"","10":""}};
+var videosPorCapitulo = {
+  "1": {
+    "1": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/ilmaqsw144x4",
+    "2": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/qez503hdv21j",
+    "3": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/cn859nmxq4n6",
+    "4": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/7sgl6kxisds4",
+    "5": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/pkitg30g5nzz",
+    "6": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/6avfbvvt1w6h",
+    "7": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/5m3gg2ry7r2x",
+    "8": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/e7h5c80ng13j",
+    "9": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/mttufhow8o3w"
+  },
+  "2": {
+    "1": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/ndqxn120lj06",
+    "2": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/xeo8n9uarmew",
+    "3": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/0tdm17t3uxws",
+    "4": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/a0bofgnj6qtz",
+    "5": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/szyci7oa700m",
+    "6": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/h8aon0xgcvv0",
+    "7": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/uzb4hb1lvm71",
+    "8": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/iujk8mu9msnm",
+    "9": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/nrtm5ytxl014",
+    "10": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/vkc5nsxxlvsx",
+    "11": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/mas25egpp187",
+    "12": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/xk3n51ohte5a",
+    "13": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/dr4dewkt775e",
+    "14": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/lmg5hwc5lm03",
+    "15": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/xpm5qnn7mmh8",
+    "16": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/8ax2ftn8ad0m",
+    "17": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/2cb3vq5w7som",
+    "18": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/miux1jmjc877",
+    "19": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/tzx2wnkcnexo",
+    "20": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/ywbpxmzrab5n"
+  },
+  "3": {
+    "1": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/lhcz52d2yntj",
+    "2": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/c1smj2u1cv16",
+    "3": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/2ncqcsa4bcpj",
+    "4": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/jhxp9sg8gpiu",
+    "5": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/mjofgbthm1dl",
+    "6": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/pxd54msgyvxr",
+    "7": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/lfjnqbwusuin",
+    "8": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/wwpfnnhs5tvc",
+    "9": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/x0fmri91no7m",
+    "10": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/q3s09s0jg74j",
+    "11": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/uflo76kg1yt6",
+    "12": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/33q3rlaf8ius",
+    "13": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/5aqct6ju5sln",
+    "14": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/d77h3edvhzih",
+    "15": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/7kczn3hksgvg"
+  },
+  "4": {
+    "1": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/quwcm3ypzn6l",
+    "2": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/7k2dvsunb9x3",
+    "3": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/cen5jix6wzx8",
+    "4": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/5yjqd04p7993",
+    "5": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/q37gw7vttn7b",
+    "6": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/emgtuwubll8y",
+    "7": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/fbdynbhyhryx",
+    "8": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/9qock58c3pgw",
+    "9": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/tms6aadyl9cb",
+    "10": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/ufrn4fhrbm1w",
+    "11": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/m788bp4pw1dv",
+    "12": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/p7jhovoln2mh"
+  },
+  "5": {
+    "1": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/bltz34s0xkbk",
+    "2": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/4tybn0aoci0k",
+    "3": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/sizw7lqw3966",
+    "4": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/0hscxghvub73",
+    "5": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/dvu7v2f676t0",
+    "6": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/2qazio0jy5rb",
+    "7": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/m91m5rus6beo",
+    "8": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/js2fuaf9zers",
+    "9": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/ikzu8xn4vz2d",
+    "10": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/e6v4021yc3ox",
+    "11": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/jupimex1v7zp",
+    "12": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/z4z9hcxd9tby",
+    "13": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/kah9m2vkas1b",
+    "14": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/io6olya4itis",
+    "15": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/oy0wcdrevzlo",
+    "16": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/hpao7n5d5o0h"
+  },
+  "6": {
+    "1": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/wjqamikexnqa",
+    "2": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/f3dm3tj3zaqn",
+    "3": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/1sdm4kmvf1y1",
+    "4": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/uvaahg25a8cu",
+    "5": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/6us4fet8yzbu",
+    "6": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/zfkqajjsr1fb",
+    "7": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/a4fjeb0hc45n",
+    "8": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/q64my5ssuy64",
+    "9": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/qf5eeqb81e2o",
+    "10": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/lw8lu0lmnml8",
+    "11": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/6ifht1lrpen5",
+    "12": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/nrrav6zshgn1",
+    "13": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/inhx25pbp5o3",
+    "14": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/7peaged1wodq",
+    "15": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/xzwa6ws9paav",
+    "16": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/v2nu5scypjbs",
+    "17": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/xpvb4zux7pgl",
+    "18": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/nhfu8o2hasv6",
+    "19": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/ucc3nerte93b",
+    "20": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/g2be4fy3bdst",
+    "21": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/idivxfe4nnw5",
+    "22": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/rqbv4ydax5lf",
+    "23": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/g2sgybqwfwq4",
+    "24": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/4ipxt3dc23eo",
+    "25": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/fvmhmeh8hkbm",
+    "26": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/n3eril4p25zy"
+  },
+  "7": {
+    "1": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/teiygbj88pte",
+    "2": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/prx9esvft4r7",
+    "3": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/cq6w9z9v5nl3",
+    "4": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/bt7peusvzepj",
+    "5": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/ns7qhzblk8vd",
+    "6": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/ddy37ob7mory",
+    "7": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/vys37k6lqam4",
+    "8": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/hj7shctps82r",
+    "9": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/oiebdb95jqhn",
+    "10": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/88vq452w3fo4",
+    "11": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/cu77w7tsss3v",
+    "12": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/t42e6ttzjwrb",
+    "13": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/vnq05wposiy2",
+    "14": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/a9s84b9urlso",
+    "15": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/b2r1crpesxc2",
+    "16": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/id7oocxbebr1",
+    "17": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/6ijn6yuqnodf",
+    "18": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/fy75cdcdjx4r",
+    "19": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/kedljf5c92sy",
+    "20": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/omxtvmpxd57f",
+    "21": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/wzi22wsx0lue",
+    "22": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/hxqb76ot6crl",
+    "23": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/nv41ztqod234",
+    "24": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/hbvmuodpe084",
+    "25": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/sqwxj5lb6r83",
+    "26": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/x61s85cwsupy"
+  },
+  "8": {
+    "1": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/knt8z13flaso",
+    "2": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/ht79chkarjyo",
+    "3": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/hggtl2su95p6",
+    "4": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/x8vslzp6mh38",
+    "5": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/lgdk57rr7271",
+    "6": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/ycs5yixkp5d5",
+    "7": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/7ncpxluj2tyi",
+    "8": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/2cjjwnfr21gr",
+    "9": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/5zvsqardzuh3",
+    "10": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/1nhbrkzjzcrg"
+  },
+  "9": {
+    "1": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/8m2nnfmszcjf",
+    "2": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/d4z0mvrsrsd2",
+    "3": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/ssc2cshhmbm3",
+    "4": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/qg355m3am7se",
+    "5": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/qys1hkv8ckk0",
+    "6": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/jcd0tgov8ky0",
+    "7": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/lm38rx2y0q17",
+    "8": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/gzpei91ni1fo",
+    "9": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/tk9e0x5jbe25",
+    "10": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/fsyme6g6wm4p"
+  },
+  "10": {
+    "1": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/zsn8h0h8jve5",
+    "2": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/1x5iuuamb8ek",
+    "3": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/hlh6l9dv65n3",
+    "4": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/pgv43fk49hcx",
+    "5": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/ympcvybu7fpd",
+    "6": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/fobc6ullclcm",
+    "7": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/lwz8o202ha5g",
+    "8": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/51lcgdu5e9qh",
+    "9": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/by87hjwnx3g2",
+    "10": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/wserb7c9880b"
+  }
+} ;
 
 function guardarTemporada(temporada) {
   localStorage.setItem("temporadaSeleccionada_" + serieId, temporada);
