--- a/Categorias/misterio/index.html
+++ b/Categorias/misterio/index.html
@@ -71,7 +71,17 @@ stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
 </header>
 <main class="max-w-[1280px] mx-auto px-4 mt-24">
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Scream 5 -->
+<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Dexter -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Series/serie66.html">
+    <img src="https://image.tmdb.org/t/p/original/q8dWfc4JwQuv3HayIZeO84jAXED.jpg" alt="Dexter" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Serie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Dexter</div>
+  <div class="text-xs text-white/70">2006</div>
+</article><!-- Scream 5 -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/pelicula656.html">
     <img src="https://image.tmdb.org/t/p/original/uWKJyIISWzP7KmB2vcgrX7xyhUh.jpg" alt="Scream 5" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
