Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -256,6 +256,14 @@ document.addEventListener("DOMContentLoaded", () => {
 
       <!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- El increible mundo de Gumball -->
 <li>
+  <a href="https://lzrdrz10.github.io/sv/Series/serie69.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+    <img src="https://image.tmdb.org/t/p/original/al3wD1MqEfwifOBBFnBM5uOl9OT.jpg" alt="El increíble mundo de Gumball" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">El increíble mundo de Gumball 2011</span>
+    <span class="hidden">La serie gira en torno a la vida de un gato azul llamado Gumball Watterson y sus frecuentes travesuras en la ficticia ciudad estadounidense de Elmore, acompañado por su hermano adoptivo y mejor amigo, Darwin. Otros miembros de la familia Watterson son: una conejita rosada e intelectual hermana menor, Anaís; un conejo holgazán como su padre, Richard; y su madre Nicole, una gata, quienes a menudo se ven involucrados en las aventuras de Gumball. Gumball y sus hermanos asisten a la escuela "Elmore Junior School" (Escuela primaria de Elmore), donde, a lo largo de la serie, interactúan con sus varios compañeros, principalmente con el interés amoroso de Gumball, Penny.</span>
+  </a>
+</li>
+<!--FIN--><!-- El increible mundo de Gumball -->
+<li>
   <a href="https://lzrdrz10.github.io/sv/Series/serie68.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
     <img src="https://image.tmdb.org/t/p/original/al3wD1MqEfwifOBBFnBM5uOl9OT.jpg" alt="El increíble mundo de Gumball" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
     <span class="hidden">El increíble mundo de Gumball 2011</span>
