--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -254,57 +254,8 @@ document.addEventListener("DOMContentLoaded", () => {
 <div id="estadoBusqueda" class="text-center text-sm text-[#bbbbbb] mt-6 hidden"></div> <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
     <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
 
-      <!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- El increible mundo de Gumball -->
-<li>
-  <a href="https://lzrdrz10.github.io/sv/Series/serie70.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
-    <img src="https://image.tmdb.org/t/p/original/al3wD1MqEfwifOBBFnBM5uOl9OT.jpg" alt="El increíble mundo de Gumball" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
-    <span class="hidden">El increíble mundo de Gumball 2011</span>
-    <span class="hidden">La serie gira en torno a la vida de un gato azul llamado Gumball Watterson y sus frecuentes travesuras en la ficticia ciudad estadounidense de Elmore, acompañado por su hermano adoptivo y mejor amigo, Darwin. Otros miembros de la familia Watterson son: una conejita rosada e intelectual hermana menor, Anaís; un conejo holgazán como su padre, Richard; y su madre Nicole, una gata, quienes a menudo se ven involucrados en las aventuras de Gumball. Gumball y sus hermanos asisten a la escuela "Elmore Junior School" (Escuela primaria de Elmore), donde, a lo largo de la serie, interactúan con sus varios compañeros, principalmente con el interés amoroso de Gumball, Penny.</span>
-  </a>
-</li>
-<!--FIN--><!-- El increible mundo de Gumball -->
-<li>
-  <a href="https://lzrdrz10.github.io/sv/Series/serie69.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
-    <img src="https://image.tmdb.org/t/p/original/al3wD1MqEfwifOBBFnBM5uOl9OT.jpg" alt="El increíble mundo de Gumball" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
-    <span class="hidden">El increíble mundo de Gumball 2011</span>
-    <span class="hidden">La serie gira en torno a la vida de un gato azul llamado Gumball Watterson y sus frecuentes travesuras en la ficticia ciudad estadounidense de Elmore, acompañado por su hermano adoptivo y mejor amigo, Darwin. Otros miembros de la familia Watterson son: una conejita rosada e intelectual hermana menor, Anaís; un conejo holgazán como su padre, Richard; y su madre Nicole, una gata, quienes a menudo se ven involucrados en las aventuras de Gumball. Gumball y sus hermanos asisten a la escuela "Elmore Junior School" (Escuela primaria de Elmore), donde, a lo largo de la serie, interactúan con sus varios compañeros, principalmente con el interés amoroso de Gumball, Penny.</span>
-  </a>
-</li>
-<!--FIN--><!-- El increible mundo de Gumball -->
-<li>
-  <a href="https://lzrdrz10.github.io/sv/Series/serie68.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
-    <img src="https://image.tmdb.org/t/p/original/al3wD1MqEfwifOBBFnBM5uOl9OT.jpg" alt="El increíble mundo de Gumball" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
-    <span class="hidden">El increíble mundo de Gumball 2011</span>
-    <span class="hidden">La serie gira en torno a la vida de un gato azul llamado Gumball Watterson y sus frecuentes travesuras en la ficticia ciudad estadounidense de Elmore, acompañado por su hermano adoptivo y mejor amigo, Darwin. Otros miembros de la familia Watterson son: una conejita rosada e intelectual hermana menor, Anaís; un conejo holgazán como su padre, Richard; y su madre Nicole, una gata, quienes a menudo se ven involucrados en las aventuras de Gumball. Gumball y sus hermanos asisten a la escuela "Elmore Junior School" (Escuela primaria de Elmore), donde, a lo largo de la serie, interactúan con sus varios compañeros, principalmente con el interés amoroso de Gumball, Penny.</span>
-  </a>
-</li>
-<!--FIN--><!-- El increible mundo de Gumball -->
-<li>
-  <a href="../Series/serie67.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
-    <img src="https://image.tmdb.org/t/p/original/al3wD1MqEfwifOBBFnBM5uOl9OT.jpg" alt="El increíble mundo de Gumball" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
-    <span class="hidden">El increíble mundo de Gumball 2011</span>
-    <span class="hidden">La serie gira en torno a la vida de un gato azul llamado Gumball Watterson y sus frecuentes travesuras en la ficticia ciudad estadounidense de Elmore, acompañado por su hermano adoptivo y mejor amigo, Darwin. Otros miembros de la familia Watterson son: una conejita rosada e intelectual hermana menor, Anaís; un conejo holgazán como su padre, Richard; y su madre Nicole, una gata, quienes a menudo se ven involucrados en las aventuras de Gumball. Gumball y sus hermanos asisten a la escuela "Elmore Junior School" (Escuela primaria de Elmore), donde, a lo largo de la serie, interactúan con sus varios compañeros, principalmente con el interés amoroso de Gumball, Penny.</span>
-  </a>
-</li>
-<!--FIN--><!-- Dexter -->
-<li>
-  <a href="../Series/serie66.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
-   <img 
-  src="https://image.tmdb.org/t/p/original/q8dWfc4JwQuv3HayIZeO84jAXED.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
-    <span class="hidden">Dexter 2006</span>
-    <span class="hidden">Dexter Morgan, un analista de patrones de salpicaduras de sangre de la Policía Metropolitana de Miami, también lleva una vida secreta como asesino en serie, persiguiendo a criminales que han escapado a la justicia.</span>
-  </a>
-</li>
-<!--FIN--><!-- El increible mundo de Gumball -->
-<li>
-  <a href="../Series/serie65.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
-   <img 
-  src="https://image.tmdb.org/t/p/original/al3wD1MqEfwifOBBFnBM5uOl9OT.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
-    <span class="hidden">El increíble mundo de Gumball 2011</span>
-    <span class="hidden">La serie gira en torno a la vida de un gato azul llamado Gumball Watterson y sus frecuentes travesuras en la ficticia ciudad estadounidense de Elmore, acompañado por su hermano adoptivo y mejor amigo, Darwin. Otros miembros de la familia Watterson son: una conejita rosada e intelectual hermana menor, Anaís; un conejo holgazán como su padre, Richard; y su madre Nicole, una gata, quienes a menudo se ven involucrados en las aventuras de Gumball. Gumball y sus hermanos asisten a la escuela "Elmore Junior School" (Escuela primaria de Elmore), donde, a lo largo de la serie, interactúan con sus varios compañeros, principalmente con el interés amoroso de Gumball, Penny.</span>
-  </a>
-</li>
-<!--FIN--><!-- Futurama -->
+      <!--ABAJO AGREGAR NUEVO CONTENIDO -->
+<!-- Futurama -->
 <li>
   <a href="../Series/serie64.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
