--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -241,15 +241,14 @@ document.addEventListener("DOMContentLoaded", () => {
 </script> 
 <header class="bg-black py-4 px-6 shadow-md fixed top-0 left-0 w-full z-50">
 <div class="max-w-5xl mx-auto flex items-center justify-between gap-4"><input id="buscar" type="text" placeholder="Que vamos a buscar ahora?"  class="w-full bg-[#1a1a1a] text-white placeholder-[#bfbfbf] rounded-md px-4 py-3 text-base focus:outline-none"  oninput="filtrar()"  autofocus/>
-<button
-  id="btnRegresar"
-  class="flex items-center text-white text-lg hover:text-yellow-400 transition ml-6"
-  title="Regresar"
-  type="button"
->
-  <i class="fas fa-arrow-left text-2xl mr-3"></i>
-  Regresar
-</button>  </div>
+<button id="btnRegresar" 
+        class="flex items-center text-white text-lg hover:text-yellow-400 transition ml-6" 
+        title="Regresar" 
+        type="button"
+        onclick="window.location.href='../index.html'">
+   <i class="fas fa-arrow-left text-2xl mr-3"></i> Regresar
+</button>
+</div>
 </header>
 <div id="estadoBusqueda" class="text-center text-sm text-[#bbbbbb] mt-6 hidden"></div> <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
     <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
