Crear/Actualizar Categorias/animacion/index.html

--- a/Categorias/animacion/index.html
+++ b/Categorias/animacion/index.html
@@ -69,7 +69,17 @@ stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
 
 
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Futurama -->
+<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Hora de Aventura -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Series/serie67.html">
+    <img src="https://image.tmdb.org/t/p/original/vpnV0g2VOounP0kHNi86oBPceMY.jpg" alt="Hora de Aventura" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Serie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Hora de Aventura</div>
+  <div class="text-xs text-white/70">2010</div>
+</article><!-- Futurama -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Series/serie64.html">
     <img src="https://image.tmdb.org/t/p/original/sqQGouRucsrFV2FgIZEKKkP5fSb.jpg" alt="Futurama" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
