--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -253,7 +253,16 @@ document.addEventListener("DOMContentLoaded", () => {
 <div id="estadoBusqueda" class="text-center text-sm text-[#bbbbbb] mt-6 hidden"></div> <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
     <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
 
-      <!--ABAJO AGREGAR NUEVO CONTENIDO -->
+      <!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Hora de Aventura -->
+<li>
+  <a href="../Series/serie67.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/vpnV0g2VOounP0kHNi86oBPceMY.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Hora de Aventura 2010</span>
+    <span class="hidden">¡No son justos, son injustos! Conéctate con Finn y Jake mientras viajan por la Tierra de Ooo en busca de aventuras. Pero recuerda, la aventura no siempre es fácil. A veces tienes que luchar contra los gnomos de fuego que torturan a las ancianas, salvar a una princesa maloliente del Rey Helado y descongelar a un grupo de hombres de negocios congelados. ¡¿Qué repollo ?!</span>
+  </a>
+</li>
+<!--FIN-->
 			<li>
   <a href="../Series/serie65.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
