Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -253,7 +253,16 @@ document.addEventListener("DOMContentLoaded", () => {
 <div id="estadoBusqueda" class="text-center text-sm text-[#bbbbbb] mt-6 hidden"></div> <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
     <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
 
-      <!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Hora de Aventura -->
+      <!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- NCIS: Tony & Ziva -->
+<li>
+  <a href="../Series/serie68.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/zNIANQsAs2kbxbzbTTe5dTBzhKe.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">NCIS: Tony & Ziva 2025</span>
+    <span class="hidden">Los exagentes huyen de una peligrosa conspiración mientras aprenden a criar a su hija juntos y a mantenerse con vida.</span>
+  </a>
+</li>
+<!--FIN--><!-- Hora de Aventura -->
 <li>
   <a href="../Series/serie67.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
