--- a/Plataforma/hbomax/index.html
+++ b/Plataforma/hbomax/index.html
@@ -163,7 +163,17 @@ document.addEventListener("DOMContentLoaded", () => {
 </header>
 <main class="max-w-[1280px] mx-auto px-4 mt-24">
   <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-    <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Hermano de Jorel especial de navidad: Hermano de Noel -->
+    <!--PEGAR CONTENIDO AQUI ABAJO--><!-- El visitante -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="https://lz.blogdepelis.lat/Series/serie69.html">
+    <img src="https://image.tmdb.org/t/p/original/foegemcN2ZS7dQI30NIfWpRl2Ls.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Serie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">El visitante</div>
+  <div class="text-xs text-white/70">2020</div>
+</article><!-- Hermano de Jorel especial de navidad: Hermano de Noel -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="https://lz.blogdepelis.lat/Peliculas/pelicula661.html">
     <img src="https://image.tmdb.org/t/p/original/3GWWAAh44ek8FuMRRP8FkK9MJn5.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
