Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -253,7 +253,16 @@ document.addEventListener("DOMContentLoaded", () => {
 <div id="estadoBusqueda" class="text-center text-sm text-[#bbbbbb] mt-6 hidden"></div> <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
     <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
 
-      <!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- NCIS: Tony & Ziva -->
+      <!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- El visitante -->
+<li>
+  <a href="../Series/serie69.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/foegemcN2ZS7dQI30NIfWpRl2Ls.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">El visitante 2020</span>
+    <span class="hidden">El detective Ralph Anderson (Ben Mendelsohn) y Holly Gibney (Cynthia Erivo), una investigadora poco ortodoxa, investigan el brutal asesinato de Frankie Peterson, un joven muchacho de 11 años, ocurrido en un pacífico pueblo. Aunque al principio todo parece tener una explicación dentro de lo plausible, pronto se darán cuenta de que una fuerza sobrenatural parece tener mucho que ver en la desaparición del chico.</span>
+  </a>
+</li>
+<!--FIN--><!-- NCIS: Tony & Ziva -->
 <li>
   <a href="../Series/serie68.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
