--- a/Categorias/action&adventure/index.html
+++ b/Categorias/action&adventure/index.html
@@ -39,7 +39,17 @@
   </header>
   <main class="max-w-[1280px] mx-auto px-4 mt-24">
     <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- NCIS: Tony & Ziva -->
+      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Batman, el Valiente -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Series/serie70.html">
+    <img src="https://image.tmdb.org/t/p/original/ukXZ1N9Pd99vDNetFKYNpFYgoXF.jpg" alt="Batman, el Valiente" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Serie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Batman, el Valiente</div>
+  <div class="text-xs text-white/70">2008</div>
+</article><!-- NCIS: Tony & Ziva -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Series/serie68.html">
     <img src="https://image.tmdb.org/t/p/original/zNIANQsAs2kbxbzbTTe5dTBzhKe.jpg" alt="NCIS: Tony & Ziva" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
