Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -253,7 +253,16 @@ document.addEventListener("DOMContentLoaded", () => {
 <div id="estadoBusqueda" class="text-center text-sm text-[#bbbbbb] mt-6 hidden"></div> <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
     <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
 
-      <!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- El visitante -->
+      <!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Batman, el Valiente -->
+<li>
+  <a href="../Series/serie70.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/ukXZ1N9Pd99vDNetFKYNpFYgoXF.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Batman, el Valiente 2008</span>
+    <span class="hidden">En cada episodio de la serie se muestra Batman trabajando en conjunto con algún otro superhéroe (del universo DC), juntos frustraran la malvados planes de algún villano, o resolverán un crimen. Dado que cada episodio es más una mini historia, la serie no cuenta con una trama general. En esta adaptación se muestra a Batman de una manera más ligera y humorística, y no tan seria y oscura.</span>
+  </a>
+</li>
+<!--FIN--><!-- El visitante -->
 <li>
   <a href="../Series/serie69.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
