Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -253,7 +253,16 @@ document.addEventListener("DOMContentLoaded", () => {
 <div id="estadoBusqueda" class="text-center text-sm text-[#bbbbbb] mt-6 hidden"></div> <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
     <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
 
-      <!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Batman, el Valiente -->
+      <!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Batman del futuro -->
+<li>
+  <a href="../Series/serie71.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/rpbHPyhLstNd5qgtjaDMdPtyPeQ.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Batman del futuro 1999</span>
+    <span class="hidden">Impulsado por el remordimiento y la venganza, un estudiante de secundaria llamado Terry McGinnis revive el papel de Batman. Bajo la supervisión de un anciano Bruno Diaz, lucha contra el crimen en una Gótica dura y futurista.</span>
+  </a>
+</li>
+<!--FIN--><!-- Batman, el Valiente -->
 <li>
   <a href="../Series/serie70.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
