--- a/Plataforma/dccomics/index.html
+++ b/Plataforma/dccomics/index.html
@@ -190,7 +190,17 @@ document.addEventListener("DOMContentLoaded", () => {
   </header>
   <main class="max-w-[1280px] mx-auto px-4 mt-24">
     <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Batman, el Valiente -->
+      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Batman del futuro -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="https://lz.blogdepelis.lat/Series/serie71.html">
+    <img src="https://image.tmdb.org/t/p/original/rpbHPyhLstNd5qgtjaDMdPtyPeQ.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Serie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Batman del futuro</div>
+  <div class="text-xs text-white/70">1999</div>
+</article><!-- Batman, el Valiente -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="https://lz.blogdepelis.lat/Series/serie70.html">
     <img src="https://image.tmdb.org/t/p/original/ukXZ1N9Pd99vDNetFKYNpFYgoXF.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
